[gd_scene load_steps=10 format=3 uid="uid://cwagfro2i0vsv"]

[ext_resource type="Script" uid="uid://bln4b4u3sj1sv" path="res://scenes/car/car.gd" id="1_yr3gr"]
[ext_resource type="PackedScene" uid="uid://b2vthpco38yiq" path="res://scenes/car/car_model.tscn" id="2_yhfra"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yhfra"]
size = Vector3(2.449463, 2.5508423, 5.9759207)

[sub_resource type="BoxShape3D" id="BoxShape3D_yr3gr"]
size = Vector3(10, 5.006, 94)

[sub_resource type="BoxShape3D" id="BoxShape3D_rytg7"]
size = Vector3(15.289307, 1, 175)

[sub_resource type="CylinderMesh" id="CylinderMesh_yhfra"]
top_radius = 0.0
bottom_radius = 4.0
height = 0.001

[sub_resource type="Animation" id="Animation_rytg7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yhfra"]
resource_name = "blink"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x7uf8"]
_data = {
&"RESET": SubResource("Animation_rytg7"),
&"blink": SubResource("Animation_yhfra")
}

[node name="Car" type="CharacterBody3D" node_paths=PackedStringArray("area3d")]
collision_layer = 19
collision_priority = 2.0
script = ExtResource("1_yr3gr")
area3d = NodePath("Area3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08557129, 0.9527397, -0.17518902)
shape = SubResource("BoxShape3D_yhfra")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0.5456047, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.34414387, -1.5503397, 51.913197)
shape = SubResource("BoxShape3D_yr3gr")

[node name="Car Model" parent="." instance=ExtResource("2_yhfra")]
transform = Transform3D(-4, 0, -6.039832e-07, 0, 4, 0, 6.039832e-07, 0, -4, 1.7, 0.7956047, 0)

[node name="MergingArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5456047, 0)
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="MergingArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.948088, 0.48980796, 0)
shape = SubResource("BoxShape3D_rytg7")

[node name="HoverColor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.10708809, 0)
visible = false
mesh = SubResource("CylinderMesh_yhfra")

[node name="DeaccelerationTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="BrakeTimer" type="Timer" parent="."]

[node name="BrakeLight" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9396927, 0.34202015, 0, -0.34202015, 0.9396927, 0, 1.2, -2.2)
light_color = Color(1, 0, 0, 1)
light_energy = 50.0
spot_range = 11.132982
spot_angle = 34.749893

[node name="TurnIndicatorAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../TurnIndicator")
libraries = {
&"": SubResource("AnimationLibrary_x7uf8")
}

[node name="TurnIndicator" type="SpotLight3D" parent="."]
transform = Transform3D(-3.7855173e-08, 0.5000001, -0.8660254, 2.1855694e-08, 0.8660254, 0.5000001, 1, 3.552714e-15, -4.3711392e-08, 1, 1.1, 0.90000004)
visible = false
light_color = Color(1, 0.609375, 0, 1)
light_energy = 50.0
spot_range = 6.30932
spot_angle = 55.863415

[node name="HeadLight" type="SpotLight3D" parent="."]
transform = Transform3D(-1, -5.3290705e-15, 8.742276e-08, 1.5180799e-08, 0.9848078, 0.17364818, -8.609461e-08, 0.1736482, -0.9848077, 5.9604645e-08, 1.1, 2.6)
light_energy = 10.0
spot_range = 10.488763
spot_angle = 53.711773

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="MergingArea" to="." method="_on_merging_area_body_entered"]
[connection signal="body_exited" from="MergingArea" to="." method="_on_merging_area_body_exited"]
[connection signal="timeout" from="DeaccelerationTimer" to="." method="_on_deacceleration_timer_timeout"]
[connection signal="timeout" from="BrakeTimer" to="." method="_on_brake_timer_timeout"]

[editable path="Car Model"]
